# taskflow

./: .env.example  .gitignore  .mcp.json  AGENTS.md  Beyond Vibe Coding- Spec-Driven Development with Code Graphs.docx  CLAUDE.md  Makefile  README.md  docker-compose.yml  environment.yml  package-lock.json  package.json  skills-lock.json
.claude/commands/: enrich-story.md
.codex/: skills
.cursor/: commands  mcp.json
.cursor/commands/: enrich-story.md
.factory/commands/: enrich-story.md
.github/: prompts
ai-agents/: README.md
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 45e7b0ada545_initial_schema.py  e478ddcffa15_seed_demo_data.py
backend/app/: config.py  database.py  main.py  schemas.py
backend/app/api/: routes.py
backend/app/api/controllers/: __init__.py  project_controller.py  task_controller.py
backend/app/managers/: __init__.py  project_manager.py  task_manager.py
backend/app/models/: __init__.py  enums.py  project.py  task.py
backend/app/repositories/: __init__.py
backend/app/services/: __init__.py
backend/app/tests/: conftest.py  test_api.py
backend/scripts/: seed.py
docs/: GUIDE.md  PROMPT.md  README.md  WORKSHOP.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/lib/: api.ts  (+1 more)
guide/: README.md  compare.md  docker.md  local-development.md  sdd-walkthrough.md  user-story-task-dependencies.md  vibe-coding-walkthrough.md  workshop.md
openspec/: config.yaml
scripts/: dev-local.ps1  dev-local.sh  setup-local.ps1  setup-local.sh
(+50 files in other folders)
